fix for padding on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -152,9 +152,10 @@ body {
       position: static;
    }
 
-   .sub-menu__link,
+   .sub-menu__item>.sub-menu__link,
    .nav__link {
       display: block;
+      padding: 20px;
       /* text-align: center; */
    }
 
@@ -175,12 +176,16 @@ body {
       content: "-";
       color: #9d9d9d;
       left: 8px;
-      top: 10px;
+      top: 18px;
       position: absolute;
    }
 
    .sub-menu__item>.sub-menu>.sub-menu__item>.sub-menu__link::before {
-
       content: "---";
    }
+
+   .sub-menu__item--has-children::after, .nav__menu-item--has-children::after {
+      top: 19px;
+   }
+
 }
